--- a/style.scss
+++ b/style.scss
@@ -20,14 +20,15 @@ body {
     color: $accent1-color;
 	width: 100vw;
     height: 100vh;
-	background-image: url("images/body-background.svg");
+	background-image: url("../images/body-background.svg");
     background-size: cover;
-	margin: 0; 
+	margin: 0;
 	padding: 0;
+    font-family: 'Chakra Petch';
 }
 
-abbr {
-    font-family: 'Marck Script';
+.page-wrapper {
+    position: relative;
 }
 
 /*
@@ -37,29 +38,33 @@ abbr {
 header {
     display: flex;
     justify-content: space-between;
+    padding: 1rem;
     background: $primary-color;
+    background-image: url(../images/hero.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     border: 1px solid $secondary-color;
     border-radius: 10px;
-    // box-shadow: 5px 5px 5px $secondary-color;
 
     &:hover {        
         background: linear-gradient(to left, $primary-color, $secondary-color, $primary-color);
         border-top-left-radius: 50%;
-        border-bottom-right-radius: 60%;
-        border: 1px solid $secondary-color;
+        border-bottom-right-radius: 60%;        
         border-top-right-radius: 0;
         border-bottom-left-radius: 0;
+        border: 1px solid $secondary-color;
     }
 
     // Header h1 style
     & h1 {
         font-family: 'Teko';
-        font-size: 80px;
-        color: $accent1-color;
+        font-size: 5rem;
+        color: $secondary-color;
 
         &::first-letter {
             font-weight: 1000;
-            color: $accent2-color;
+            color: $accent3-color;
             font-size: 120px;
         }
 
@@ -79,47 +84,194 @@ header {
 
     // Header h2 style
     & h2 {
-        padding: 118px 100px 160px 100px;
-        background-image: url(images/flying-saucer.svg);
+        padding: 132px 100px 100px 100px;
+        background-image: url(../images/space-saucer.svg);
         font-size: .9rem;
-        color: $secondary-color;
+        color: $primary-color;
         background-repeat: no-repeat;
         background-position: center;
         background-size: 300px 300px;
-        align-self: flex-end;
         font-family: 'Chakra Petch';
-        animation: flying-saucer 15s infinite linear;
+        animation: flyingSaucer 3s infinite ease-in-out;
         
         // border-radius: 5px;
     }
+
+    @keyframes flyingSaucer {
+        0% {transform: translate(-80%, 10%);}
+        50% {transform: translate(-80%, -14%);}
+        100% {transform: translate(-80%, 10%);}
+    }    
+}
+
+/*
+ * Summary styling
+ */
+ .summary {
+    // display: flex;
+    font-size: 4rem;
+    margin: 0;
+    overflow: hidden;
+    
+    
+
+    & p:nth-child(1) {
+        color: $accent1-color;
+        margin: 0;
+        padding: 1rem 6rem;
+        background-color: $primary-color;        
+        animation: rightToLeft 24s infinite linear;
+        width: 300%;
+        overflow: hidden;
+    }
+
+    @keyframes rightToLeft {
+        0% {transform: translate(0%)};        
+        95% {transform: translate(-40%)};
+    }
+    
+    & p:nth-child(2) {
+        background-color: $accent3-color;
+        width: 30%;
+        margin: 0;
+        padding: 1rem;
+        font-size: 1rem;
+        color: $primary-color;
+        border-radius: 0 0 4rem 0;
+
+        & a {
+            text-decoration: none;
+            text-transform: uppercase;
+            font-weight: 700;
+            color: $secondary-color;
+
+        }        
+    }
+ }
+
+ .preamble {
+    text-align: right;
+    display: flex;        
+    flex-direction: column;
+    float: right;    
+    max-width: 50%;
+    padding: 1rem 2rem;    
+    margin: 0 2rem;
+    background-image: url(../images/rocket.svg);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-color: rgba($color: $accent2-color, $alpha: 0.6);
+    border-radius: 2rem;
+
+    & p, & h3 {
+        max-width: 60%;
+        text-align: left;
+    }
+ }
+
+/*
+ * Main styling
+ */
+
+.main {
+    display: grid;
+    justify-content: space-evenly;
+    justify-items: center;
+    grid-template-columns: 1fr 1fr;
+    padding: 1rem;
+    clear: both;
+    
+    & p {padding: .4rem;}
+
+    & .explanation,
+    & .participation {
+        max-width: 600px;
+        padding: 60px 4rem;
+        color: $accent1-color;
+        background-image: url(../images/frame-01.svg);
+        background-repeat: no-repeat;
+        background-position: top;
+        background-size: 720px;
+
+        & h3 {
+            color: $accent3-color;
+        }
+    }
+}
+
+.sidebar {
+    position: absolute;
+    top: 32%;
+    padding: 1rem; 
+    width: 30%;   
+
+    & .wrapper {    
+        display: flex;        
+        flex-direction: column;
+
+        & .design-selection,
+        & .design-archives,
+        & .zen-resources {
+
+            & h3 {
+                background-color: rgba($color: $accent2-color, $alpha: 0.6);
+                padding: 1.2rem;
+                margin: .2rem;
+                font-size: 1.4rem;
+                font-family: 'Teko';
+                border-radius: 1rem;
+            }
+
+            & ul {
+                display: none;
+            }
+
+            & ul:hover {
+                display: flex;
+            }
+
+        }
+    }
 }
 
 
-@media (max-width: 600px) {
+@media (max-width: 1420px) {
     header {
         flex-direction: column;
         align-items: center;
-    }
-}
-@keyframes flying-saucer {
-    10% {
-        left:0;
-        bottom: 0;
-        transform: translate(-50px);
+        
+        & h2 {
+            padding: 112px 100px 100px 100px;
         }
-    20% {transform: translate(-100px, -40px);}
-    30% {transform: translate(-150px, -60px);}
-    40% {
-        transform: translate(-200px, -80px);
-        transform: rotateX('20deg');
+
+        @keyframes flyingSaucer {
+            0% {transform: translate(0%, -90%);}
+            50% {transform: translate(0%, -80%);}
+            100% {transform: translate(0%, -90%);}
+        }
+    } 
+
+
+    .main {
+        grid-template-columns: 1fr;
+
+        & .explanation,
+        & .participation {
+            max-width: 760px;
+            padding: 160px 6rem;
+            background-size: 900px;
+        }
     }
-    50% {transform: translate(-250px, -100px);}
-    60% {transform: translate(-200px, -120px);}
-    70% {transform: translate(-150px, -140px);}
-    80% {
-        transform: rotate(10deg);
-        transform: translate(-100px, -160px);
+
+    .summary {     
+    
+        & p:nth-child(1) {
+            width: 600%;
+            overflow: hidden;
+        }
     }
-    90% {transform: translate(-50px, -140px);}
-    100% {transform: translate(-10px, -40px);}
+
+    .sidebar {
+        top: 29%;
+    }
 }
