--- a/style.scss
+++ b/style.scss
@@ -17,14 +17,15 @@ html {
 body { 
 	font: 75% georgia, sans-serif;
 	line-height: 1.4;
-    color: $accent1-color;
-	width: 100vw;
+    color: $accent1-color;	
+	width: 100%;
     height: 100vh;
 	background-image: url("../images/body-background.svg");
     background-size: cover;
 	margin: 0;
 	padding: 0;
     font-family: 'Chakra Petch';
+
 }
 
 .page-wrapper {
@@ -47,14 +48,14 @@ header {
     border: 1px solid $secondary-color;
     border-radius: 10px;
 
-    &:hover {        
+    /*&:hover {        
         background: linear-gradient(to left, $primary-color, $secondary-color, $primary-color);
         border-top-left-radius: 50%;
         border-bottom-right-radius: 60%;        
         border-top-right-radius: 0;
         border-bottom-left-radius: 0;
         border: 1px solid $secondary-color;
-    }
+    }*/
 
     // Header h1 style
     & h1 {
@@ -68,7 +69,7 @@ header {
             font-size: 120px;
         }
 
-        &:hover {
+        /*&:hover {
             line-height: .8;
             font-size: 5rem;        
             font-family: 'Chakra Petch';
@@ -79,7 +80,7 @@ header {
                 color: $accent1-color;
                 font-size: 7rem;
             }
-        }
+        }*/
     }
 
     // Header h2 style
@@ -93,8 +94,6 @@ header {
         background-size: 300px 300px;
         font-family: 'Chakra Petch';
         animation: flyingSaucer 3s infinite ease-in-out;
-        
-        // border-radius: 5px;
     }
 
     @keyframes flyingSaucer {
@@ -220,16 +219,24 @@ header {
                 font-size: 1.4rem;
                 font-family: 'Teko';
                 border-radius: 1rem;
+                transition: background-color .5s ease;
+                transition: transform .5s ease, background-color .5s ease;
+
+                &:hover {
+                    background-color: $accent2-color;
+                    transform: translateX(2rem);
+                    // transform: scale(1.05);
+                    
+                }
             }
 
             & ul {
                 display: none;
             }
 
-            & ul:hover {
-                display: flex;
+            &:hover {                
+                // display: flex;
             }
-
         }
     }
 }
