--- a/style.scss
+++ b/style.scss
@@ -173,6 +173,7 @@ header {
  */
 
 .main {
+    max-width: 1800px;
     display: grid;
     justify-content: space-evenly;
     justify-items: center;
@@ -198,9 +199,13 @@ header {
     }
 }
 
+/*
+ * Sidebar styling
+ */
+
 .sidebar {
     position: absolute;
-    top: 32%;
+    top: 25%;
     padding: 1rem; 
     width: 30%;   
 
@@ -208,6 +213,7 @@ header {
         display: flex;        
         flex-direction: column;
 
+        // Sidebar menus
         & .design-selection,
         & .design-archives,
         & .zen-resources {
@@ -219,26 +225,84 @@ header {
                 font-size: 1.4rem;
                 font-family: 'Teko';
                 border-radius: 1rem;
-                transition: background-color .5s ease;
                 transition: transform .5s ease, background-color .5s ease;
 
                 &:hover {
                     background-color: $accent2-color;
                     transform: translateX(2rem);
                     // transform: scale(1.05);
-                    
+                    opacity: 1;
                 }
             }
 
-            & ul {
-                display: none;
+            & nav, & ul {
+                display: none;                
             }
 
-            &:hover {                
-                // display: flex;
+            &:hover {
+                & nav, & ul {
+                    display: flex;
+                    flex-direction: column;
+                    list-style: none;                  
+
+                    & li {
+                        margin: .2rem;
+                        padding: .8rem;
+                        background-color: rgba($color: $accent3-color, $alpha: 1);
+                        border-radius: 1rem .2rem;
+                        color: $primary-color;
+                        font-size: .8rem;
+                        transition: transform .5s ease;
+
+                        &:hover {
+                            transform: scale(1.08);
+                        }
+
+                        & a {
+                            text-decoration: none;                          
+                            text-transform: uppercase;
+                            color: $secondary-color;
+                            font-weight: 700;
+                        }
+                    }
+                }                
             }
         }
     }
+}
+
+.benefits {
+    grid-column: 1/3;
+    display: grid;
+    // justify-content: center;
+    align-items: center;
+    grid-template-columns: 1fr 1fr;
+    // border: 1px solid $accent1-color;
+    // background-color: rgba($color: $primary-color, $alpha: .5);
+    // border-radius: 1rem;
+
+    & h3 {
+        width: 50%;
+        font-size: 5rem;
+        padding: 4rem 0;
+        justify-self: center;
+        background-image: url(../images/astronaut.svg);
+        background-repeat: no-repeat;
+        background-position: left;
+        background-size: 280px;
+        animation: astronaut 10s infinite linear;
+    }
+
+    @keyframes astronaut {
+        0% {transform: rotateZ(0deg);}
+        100% {transform: rotateZ(360deg);}
+    }
+
+    & p {
+        font-size: 2rem;
+    }
+
+    // background-color: red;
 }
 
 
@@ -279,6 +343,10 @@ header {
     }
 
     .sidebar {
-        top: 29%;
+        top: 26%;
+    }
+
+    .benefits {
+        grid-column: 1/2;
     }
 }
