--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,7 @@ body {
     color: $accent1-color;	
 	width: 100%;
     height: 100vh;
+    background-color: $secondary-color;
 	background-image: url("../images/body-background.svg");
     background-size: cover;
 	margin: 0;
@@ -205,7 +206,7 @@ header {
 
 .sidebar {
     position: absolute;
-    top: 25%;
+    top: 27%;
     padding: 1rem; 
     width: 30%;   
 
@@ -274,12 +275,8 @@ header {
 .benefits {
     grid-column: 1/3;
     display: grid;
-    // justify-content: center;
     align-items: center;
     grid-template-columns: 1fr 1fr;
-    // border: 1px solid $accent1-color;
-    // background-color: rgba($color: $primary-color, $alpha: .5);
-    // border-radius: 1rem;
 
     & h3 {
         width: 50%;
@@ -301,8 +298,27 @@ header {
     & p {
         font-size: 2rem;
     }
+}
 
-    // background-color: red;
+.requirements {
+    grid-column: 1/3;
+    display: grid;
+    // align-items: center;
+    grid-template-columns: repeat(4, 1fr);
+
+    & h3 {
+        grid-column: 1 / 5;
+    }
+
+    & p {
+        padding: 1rem;
+        margin: .4rem;
+        background-color: rgba($color: $primary-color, $alpha: 0.6);
+        border: 1px solid $accent3-color;
+        border-top: 12px solid $accent3-color;
+        // border-bottom: 12px solid $accent1-color;
+        border-radius: 2rem 0;
+    }
 }
 
 
@@ -346,7 +362,7 @@ header {
         top: 26%;
     }
 
-    .benefits {
+    .benefits, .requirements {
         grid-column: 1/2;
     }
 }
