--- a/style.scss
+++ b/style.scss
@@ -283,7 +283,7 @@ header {
         font-size: 5rem;
         padding: 4rem 0;
         justify-self: center;
-        background-image: url('/images/astronaut.svg');
+        background-image: url(../images/astronaut.svg);
         background-repeat: no-repeat;
         background-position: left;
         background-size: 280px;
