--- a/style.scss
+++ b/style.scss
@@ -380,8 +380,9 @@ header {
         max-width: 90%;
         float: none;
         margin: 2rem auto;
-        padding: .4rem;
+        padding: 1rem;
         border-radius: 1rem;
+        background-image: none;
 
         & p, & h3 {
             max-width: 100%;
@@ -389,4 +390,37 @@ header {
         }
     }
 
+    .main {
+
+        & .explanation,
+        & .participation {
+            background-image: none;
+            padding: 0;      
+        }
+    }
+
+    .benefits {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+
+        & h3 {
+            font-size: 2rem;
+            // background-image: none;
+            padding: 2rem 0;
+            background-size: 96px;
+            animation: none;
+        }
+
+        & p {
+            font-size: 1rem;
+        }
+    }
+
+    .requirements {
+        display: flex;
+        flex-direction: column;
+    }
 }
