--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,6 @@ body {
 	line-height: 1.4;
     color: $accent1-color;	
 	width: 100%;
-    height: 100vh;
     background-color: $secondary-color;
 	background-image: url("../images/body-background.svg");
     background-size: cover;
@@ -40,23 +39,11 @@ body {
 header {
     display: flex;
     justify-content: space-between;
-    padding: 1rem;
     background: $primary-color;
     background-image: url(../images/hero.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    border: 1px solid $secondary-color;
-    border-radius: 10px;
-
-    /*&:hover {        
-        background: linear-gradient(to left, $primary-color, $secondary-color, $primary-color);
-        border-top-left-radius: 50%;
-        border-bottom-right-radius: 60%;        
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 0;
-        border: 1px solid $secondary-color;
-    }*/
 
     // Header h1 style
     & h1 {
@@ -349,11 +336,11 @@ header {
             width: 600%;
             overflow: hidden;
         }
-    }
 
-    .sidebar {
-        top: 26%;
-    }
+        & p:nth-child(2) { border-radius: 0 0 3rem 0; }
+    }   
+
+    .sidebar { top: 25.5%; }
 
     .benefits, .requirements {
         grid-column: 1/2;
@@ -361,41 +348,57 @@ header {
 }
 
 @media (max-width: 900px) {
-
-    .summary {
-        font-size: 1.8rem;       
-    
-        & p:nth-child(1) {
-            width: 600%;
-        }
-
-        & p:nth-child(2) {
-            width: 80%;
-            padding: .6rem;
-            font-size: .8rem;
-        }
-    }
-
-    .preamble {
-        max-width: 90%;
-        float: none;
-        margin: 2rem auto;
-        padding: 1rem;
-        border-radius: 1rem;
-        background-image: none;
-
-        & p, & h3 {
-            max-width: 100%;
-            text-align: left;
-        }
-    }
+    .summary { font-size: 1.6rem; }
 
     .main {
 
         & .explanation,
         & .participation {
             background-image: none;
-            padding: 0;      
+            padding: 0;
+            
+            & h3 {
+                background-color: $accent3-color;
+                color: $secondary-color;
+                padding: .6rem;
+                border-radius: 1.4rem .1rem 1.4rem .1rem;
+            }
+        }
+    }
+
+    .sidebar { 
+        
+        top: 31.5%;
+
+        & .wrapper {    
+            display: flex;        
+            flex-direction: column;
+    
+            // Sidebar menus
+            & .design-selection,
+            & .design-archives,
+            & .zen-resources {
+    
+                & h3 {
+                    font-size: 1rem;
+                    padding: .6rem;
+                    max-width: 80%;
+                    border-radius: .5rem;
+                }
+            }
+
+            &:hover {
+                & nav, & ul {                 
+
+                    & li {
+                        max-width: 90%;                        
+
+                        & a {
+                            font-size: .6rem;
+                        }
+                    }
+                }                
+            }
         }
     }
 
@@ -408,15 +411,90 @@ header {
 
         & h3 {
             font-size: 2rem;
-            // background-image: none;
             padding: 2rem 0;
             background-size: 96px;
+            width: 100%;
+            background-position: center;
             animation: none;
         }
 
         & p {
             font-size: 1rem;
         }
+    }
+
+    .requirements {
+
+        & h3 {grid-column: 1 / 3;}
+
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+
+        
+    }
+}
+
+@media (max-width: 596px) {
+
+    header {
+        max-height: 300px;
+    
+        // Header h1 style
+        & h1 {
+            font-size: 2rem;
+            line-height: 2rem;
+            margin-top:80px;
+    
+            &::first-letter { font-size: 60px; }
+        }
+    
+        // Header h2 style
+        & h2 {
+            text-align: center;
+            padding: 106px 20px 100px 20px;
+            font-size: .6rem;
+            background-size: 140px 140px;
+        }
+    
+        @keyframes flyingSaucer {
+            0% {transform: translate(0%, -50%);}
+            50% {transform: translate(0%, -60%);}
+            100% {transform: translate(0%, -50%);}
+        }    
+    }
+
+    .summary {
+        font-size: 1rem;       
+    
+        & p:nth-child(1) {
+            width: 800%;
+        }
+
+        & p:nth-child(2) {
+            width: 80%;
+            padding: .6rem;
+            font-size: .6rem;
+            border-radius: 0 0 2rem 0;
+        }
+    }
+
+    .preamble {
+        max-width: 90%;
+        float: none;
+        margin: 2rem auto;
+        padding: .6rem;
+        border-radius: 1rem;
+        background-image: none;
+
+        & p, & h3 {
+            max-width: 100%;
+            text-align: left;
+        }
+    }
+    
+    .sidebar {
+        width: 90%;
+        top: 17.2%;
     }
 
     .requirements {
