--- a/style.scss
+++ b/style.scss
@@ -30,6 +30,8 @@ body {
 
 .page-wrapper {
     position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 /*
@@ -148,6 +150,7 @@ header {
  */
 
 .main {
+    order: 3;
     max-width: 1800px;
     display: grid;
     justify-content: space-evenly;
@@ -180,7 +183,7 @@ header {
 
 .sidebar {
     position: absolute;
-    top: 27%;
+    top: 24%;
     padding: 1rem; 
     width: 30%;   
 
@@ -340,7 +343,7 @@ header {
         & p:nth-child(2) { border-radius: 0 0 3rem 0; }
     }   
 
-    .sidebar { top: 25.5%; }
+    .sidebar { top: 24.3%; }
 
     .benefits, .requirements {
         grid-column: 1/2;
@@ -493,6 +496,8 @@ header {
     }
     
     .sidebar {
+        position: static;
+        order: 1;
         width: 90%;
         top: 17.2%;
     }
