--- a/style.scss
+++ b/style.scss
@@ -357,11 +357,15 @@ header {
 .requirements {
     grid-column: 1/3;
     display: grid;
-    // align-items: center;
     grid-template-columns: repeat(4, 1fr);
 
     & h3 {
         grid-column: 1 / 5;
+    }
+
+    & a {
+        color: $accent3-color;
+        text-decoration: none;
     }
 
     & p {
