--- a/style.scss
+++ b/style.scss
@@ -22,6 +22,7 @@ body {
     background-color: $secondary-color;
 	background-image: url("../images/body-background.svg");
     background-size: cover;
+    // background-position: right;
 	margin: 0;
 	padding: 0;
     font-family: 'Chakra Petch';
