--- a/style.css
+++ b/style.css
@@ -7,11 +7,10 @@ html {
 }
 
 body {
-  font: 75% georgia, sans-serif;
+  font: 75% Arial, Helvetica, sans-serif;
   line-height: 1.4;
   color: #959ba3;
   width: 100%;
-  height: 100vh;
   background-color: #142945;
   background-image: url("../images/body-background.svg");
   background-size: cover;
@@ -22,6 +21,8 @@ body {
 
 .page-wrapper {
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 /*
@@ -30,22 +31,11 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  padding: 1rem;
   background: #091624;
   background-image: url(../images/hero.svg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  border: 1px solid #142945;
-  border-radius: 10px;
-  /*&:hover {        
-      background: linear-gradient(to left, $primary-color, $secondary-color, $primary-color);
-      border-top-left-radius: 50%;
-      border-bottom-right-radius: 60%;        
-      border-top-right-radius: 0;
-      border-bottom-left-radius: 0;
-      border: 1px solid $secondary-color;
-  }*/
 }
 header h1 {
   font-family: "Teko";
@@ -92,7 +82,7 @@ header h2 {
   color: #959ba3;
   margin: 0;
   padding: 1rem 6rem;
-  background-color: #091624;
+  background-image: linear-gradient(to bottom right, #732262, #091624, #091624);
   animation: rightToLeft 24s infinite linear;
   width: 300%;
   overflow: hidden;
@@ -144,11 +134,12 @@ header h2 {
  * Main styling
  */
 .main {
+  order: 3;
   max-width: 1800px;
   display: grid;
+  grid-template-columns: 1fr 1fr;
   justify-content: space-evenly;
   justify-items: center;
-  grid-template-columns: 1fr 1fr;
   padding: 1rem;
   clear: both;
 }
@@ -167,13 +158,101 @@ header h2 {
 .main .explanation h3, .main .participation h3 {
   color: #de9a38;
 }
+.main .explanation a, .main .participation a {
+  text-decoration: none;
+  color: #de9a38;
+}
+.main footer {
+  width: 100%;
+  grid-column: 1/3;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 52px 0 0 0;
+  padding: 4rem 0;
+}
+.main footer a {
+  position: relative;
+  font-size: 4em;
+  font-family: "Teko";
+  color: #732262;
+  text-shadow: 0 0 0.125em #732262, 0 0 0.25em #732262;
+  margin: 0.5rem 0.4rem;
+  padding: 0.25em 1em;
+  text-decoration: none;
+  border: 0.2rem solid #732262;
+  border-radius: 2rem 0 2rem 0;
+  cursor: pointer;
+  transition: 1s;
+}
+.main footer a::before {
+  content: "";
+  position: absolute;
+  background: #732262;
+  top: 120%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: perspective(3em) rotateX(60deg) scale(1, 0.35);
+  filter: blur(1em);
+  opacity: 0.7;
+}
+.main footer a:hover, .main footer a:focus {
+  background-color: #732262;
+  color: #091624;
+  text-shadow: 0;
+  transform: translateY(-25px);
+}
+.main footer a:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  box-shadow: 0 0 1em 0.1em #732262;
+}
+@keyframes motion {
+  0% {
+    transform: translate(0%);
+  }
+  10% {
+    transform: translateX(2%);
+  }
+  20% {
+    transform: translateX(4%);
+  }
+  30% {
+    transform: translateX(6%);
+  }
+  40% {
+    transform: translateX(8%);
+  }
+  50% {
+    transform: translateX(10%);
+  }
+  60% {
+    transform: translateX(8%);
+  }
+  70% {
+    transform: translateX(6%);
+  }
+  80% {
+    transform: translateX(4%);
+  }
+  90% {
+    transform: translateX(2%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
 
 /*
  * Sidebar styling
  */
 .sidebar {
   position: absolute;
-  top: 27%;
+  top: 20.9%;
   padding: 1rem;
   width: 30%;
 }
@@ -259,6 +338,10 @@ header h2 {
 .requirements h3 {
   grid-column: 1/5;
 }
+.requirements a {
+  color: #de9a38;
+  text-decoration: none;
+}
 .requirements p {
   padding: 1rem;
   margin: 0.4rem;
@@ -300,12 +383,18 @@ header h2 {
     padding: 160px 6rem;
     background-size: 900px;
   }
+  .main footer {
+    grid-column: 1/2;
+  }
   .summary p:nth-child(1) {
     width: 600%;
     overflow: hidden;
   }
+  .summary p:nth-child(2) {
+    border-radius: 0 0 3rem 0;
+  }
   .sidebar {
-    top: 26%;
+    top: 22%;
   }
   .benefits, .requirements {
     grid-column: 1/2;
@@ -313,31 +402,36 @@ header h2 {
 }
 @media (max-width: 900px) {
   .summary {
-    font-size: 1.8rem;
-  }
-  .summary p:nth-child(1) {
-    width: 600%;
-  }
-  .summary p:nth-child(2) {
-    width: 80%;
-    padding: 0.6rem;
-    font-size: 0.8rem;
-  }
-  .preamble {
-    max-width: 90%;
-    float: none;
-    margin: 2rem auto;
-    padding: 1rem;
-    border-radius: 1rem;
-    background-image: none;
-  }
-  .preamble p, .preamble h3 {
-    max-width: 100%;
-    text-align: left;
+    font-size: 1.6rem;
   }
   .main .explanation, .main .participation {
     background-image: none;
     padding: 0;
+  }
+  .main .explanation h3, .main .participation h3 {
+    background-color: #de9a38;
+    color: #142945;
+    padding: 0.6rem;
+    border-radius: 1.4rem 0.1rem 1.4rem 0.1rem;
+  }
+  .sidebar {
+    top: 27%;
+  }
+  .sidebar .wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  .sidebar .wrapper .design-selection h3, .sidebar .wrapper .design-archives h3, .sidebar .wrapper .zen-resources h3 {
+    font-size: 1rem;
+    padding: 0.6rem;
+    max-width: 80%;
+    border-radius: 0.5rem;
+  }
+  .sidebar .wrapper:hover nav li, .sidebar .wrapper:hover ul li {
+    max-width: 90%;
+  }
+  .sidebar .wrapper:hover nav li a, .sidebar .wrapper:hover ul li a {
+    font-size: 0.6rem;
   }
   .benefits {
     display: flex;
@@ -349,10 +443,84 @@ header h2 {
     font-size: 2rem;
     padding: 2rem 0;
     background-size: 96px;
+    width: 100%;
+    background-position: center;
     animation: none;
   }
   .benefits p {
     font-size: 1rem;
+  }
+  .requirements {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .requirements h3 {
+    grid-column: 1/3;
+  }
+}
+@media (max-width: 596px) {
+  header {
+    max-height: 300px;
+  }
+  header h1 {
+    font-size: 2rem;
+    line-height: 2rem;
+    margin-top: 80px;
+  }
+  header h1::first-letter {
+    font-size: 60px;
+  }
+  header h2 {
+    text-align: center;
+    padding: 106px 20px 100px 20px;
+    font-size: 0.6rem;
+    background-size: 140px 140px;
+  }
+  @keyframes flyingSaucer {
+    0% {
+      transform: translate(0%, -50%);
+    }
+    50% {
+      transform: translate(0%, -60%);
+    }
+    100% {
+      transform: translate(0%, -50%);
+    }
+  }
+  .summary {
+    font-size: 1rem;
+  }
+  .summary p:nth-child(1) {
+    width: 700%;
+  }
+  .summary p:nth-child(2) {
+    width: 80%;
+    padding: 0.6rem;
+    font-size: 0.6rem;
+    border-radius: 0 0 2rem 0;
+  }
+  .preamble {
+    max-width: 90%;
+    float: none;
+    margin: 2rem auto;
+    padding: 0.6rem;
+    border-radius: 1rem;
+    background-image: none;
+  }
+  .preamble p, .preamble h3 {
+    max-width: 100%;
+    text-align: left;
+  }
+  .main footer a {
+    width: 70%;
+    font-size: 2.6rem;
+    padding: 0rem 0.8rem;
+    text-align: center;
+  }
+  .sidebar {
+    position: static;
+    width: 90%;
+    top: 17.2%;
   }
   .requirements {
     display: flex;
